[gd_scene load_steps=7 format=2]

[ext_resource path="res://planets/Planet.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://Kenney Mini.ttf" type="DynamicFontData" id=3]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=3]
radius = 170.0

[node name="Player" type="RigidBody2D"]
collision_mask = 6
mode = 2
physics_material_override = SubResource( 1 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Planet" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SpeedLabel" type="Label" parent="CanvasLayer"]
margin_left = 2.58827
margin_top = 0.647072
margin_right = 112.588
margin_bottom = 20.6471
custom_fonts/font = SubResource( 2 )
text = "Speed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionLabel" type="Label" parent="CanvasLayer"]
margin_left = 2.9118
margin_top = 19.8235
margin_right = 112.912
margin_bottom = 39.8235
custom_fonts/font = SubResource( 2 )
text = "Position:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AsteroidLabel" type="Label" parent="CanvasLayer"]
margin_left = 2.57124
margin_top = 36.8516
margin_right = 112.571
margin_bottom = 56.8516
custom_fonts/font = SubResource( 2 )
text = "Asteroids: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShoutRange" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShoutRange"]
shape = SubResource( 3 )
